// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accessibility Tests Elements can set accessibilityState:selected to false 1`] = `
{
  "Automation Tree": {
    "AutomationId": "Selectable item 1",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Selectable item 1",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Unselected",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selectable item 1",
      "TestId": "Selectable item 1",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(135, 206, 250, 255)",
    },
    "Comment": "Selectable item 1",
    "Offset": "0, 0, 0",
    "Size": "100, 50",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "100, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "100, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Accessibility Tests Elements can set accessibilityState:selected to true 1`] = `
{
  "Automation Tree": {
    "AutomationId": "Selectable item 1",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "Selectable item 1",
    "SelectionItemPattern.IsSelected": true,
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Selected",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selectable item 1",
      "TestId": "Selectable item 1",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(128, 128, 128, 255)",
    },
    "Comment": "Selectable item 1",
    "Offset": "0, 0, 0",
    "Size": "100, 50",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "100, 20",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "100, 20",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Accessibility Tests Selectable items must have a Selection Container. Elements can set accessibilityState:multiselectable and accessibilityState:required to true 1`] = `
{
  "Automation Tree": {
    "AutomationId": "selection-container",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "Name": "Selection Container",
    "SelectionPattern.CanSelectMultiple": true,
    "SelectionPattern.IsSelectionRequired": true,
    "__Children": [
      {
        "AutomationId": "Selectable item 1",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 1",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
          },
        ],
      },
      {
        "AutomationId": "Selectable item 2",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 2",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
          },
        ],
      },
      {
        "AutomationId": "Selectable item 3",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 3",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
          },
        ],
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selection Container",
      "TestId": "selection-container",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ScrollViewComponentView",
        "_Props": {
          "AccessibilityLabel": "List of selectable items",
        },
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
            "__Children": [
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 1",
                  "TestId": "Selectable item 1",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 2",
                  "TestId": "Selectable item 2",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 3",
                  "TestId": "Selectable item 3",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "selection-container",
    "Offset": "0, 0, 0",
    "Size": "916, 150",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "916, 150",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "916, 150",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": "0, 0, 0",
                "Size": "916, 150",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Brush": {
                      "Brush Type": "ColorBrush",
                      "Color": "rgba(0, 0, 0, 0)",
                    },
                    "Offset": "0, 0, 0",
                    "Size": "916, 150",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Offset": "0, 0, 0",
                        "Size": "916, 150",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "916, 150",
                            "Visual Type": "SpriteVisual",
                            "__Children": [
                              {
                                "Offset": "0, 0, 0",
                                "Size": "100, 50",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 1",
                                    "Offset": "0, 0, 0",
                                    "Size": "100, 50",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "100, 20",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "100, 20",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                              {
                                "Offset": "0, 50, 0",
                                "Size": "100, 50",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 2",
                                    "Offset": "0, 0, 0",
                                    "Size": "100, 50",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "100, 20",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "100, 20",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                              {
                                "Offset": "0, 100, 0",
                                "Size": "100, 50",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 3",
                                    "Offset": "0, 0, 0",
                                    "Size": "100, 50",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "100, 20",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "100, 20",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              {
                "Offset": "-13, 0, 0",
                "Size": "12, 0",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "-12, 3, 0",
                    "Opacity": 0,
                    "Size": "12, 144",
                    "Visual Type": "Visual",
                  },
                  {
                    "Offset": "0, 4, 0",
                    "Opacity": 0,
                    "Size": "12, 12",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "0, -16, 0",
                    "Opacity": 0,
                    "Size": "12, 12",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "-5, 16, 0",
                    "Size": "6, 118",
                    "Visual Type": "Visual",
                  },
                ],
              },
              {
                "Offset": "0, -13, 0",
                "Size": "0, 12",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "3, -12, 0",
                    "Opacity": 0,
                    "Size": "910, 12",
                    "Visual Type": "Visual",
                  },
                  {
                    "Offset": "4, 0, 0",
                    "Opacity": 0,
                    "Size": "12, 12",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "-16, 0, 0",
                    "Opacity": 0,
                    "Size": "12, 12",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "16, -5, 0",
                    "Size": "884, 6",
                    "Visual Type": "Visual",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;
